# iced_forms

./: Cargo.toml  LICENSE  README.md
iced_form/: Cargo.toml
iced_form/examples/: simple.rs
iced_form/src/: form_field.rs  lib.rs
iced_form_derive/: Cargo.toml
iced_form_derive/examples/: enum_form.rs  simple.rs
iced_form_derive/src/: de_enum.rs  de_struct.rs  de_unit_enum.rs  lib.rs
iced_form_derive/tests/: 01-form-derive.rs  02-nested-and-enum.rs  03-handling-mods.rs  form_derive.rs
